--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
 <div class="body-two">
     <div class='navbar animated fadeInLeft'>
-        <a href="index.html"><span>HOME</span></a>
+        <a href="#"><span>HOME</span></a>
         <a href="#"><span>ABOUT</span></a>
         <a href="#"><span>RESUME</span></a>
         <a href="#" class="active"><span>CONTACT</span></a>
