--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 </head>
 
 <body id="body">
-
     <section id="body-one">
             <div class="box-name animated fadeInUp">
 
@@ -42,7 +41,13 @@
         <div class="about-Slider">
 
             <div id="caro1">
-                <span>About Me</span>
+                <h1>Flank Pariatur Nostrud</h1>
+                <p>
+                    Bacon ipsum dolor amet pork kevin turkey bresaola. Pig rump sirloin swine pork loin beef pastrami. Shank spare ribs bresaola prosciutto kevin picanha short loin fatback t-bone.
+                    Flank drumstick cupim pig frankfurter t-bone turkey sausage strip steak turducken bacon short loin leberkas.
+                    Meatball pig tongue, biltong pork cupim short ribs pork chop drumstick.
+                    Strip steak prosciutto turducken capicola picanha cow jerky spare ribs hamburger turkey ground round t-bone.
+                </p>
             </div>
             <div id="caro2">
                 <span>Other stuff</span>
@@ -73,11 +78,11 @@
     </section>
 
     <div class='navbar animated fadeInLeft'>
-        <a href="#body-one" onclick="javascript:clickStuff('body-one')"><span>HOME</span></a>
-        <a href="#body-two" onclick="javascript:clickStuff('body-two')"><span>ABOUT</span></a>
-        <a href="#"><span>RESUME</span></a>
-        <a href="#"><span>PORTFOLIO</span></a>
-        <a href="#body-four" onclick="javascript:clickStuff('body-four')"><span>CONTACT</span></a>
+        <a href="#body-one" onclick="javascript:clickStuff('body-one')"><span>HOME <i class="fa fa-home" aria-hidden="true"></i></span></a>
+        <a href="#body-two" onclick="javascript:clickStuff('body-two')"><span>ABOUT <i class="fa fa-rocket" aria-hidden="true"></i></span></a>
+        <a href="AndrewWardResume.docx"><span>RESUME <i class="fa fa-download" aria-hidden="true"></i></span></a>
+        <a href="#"><span>PORTFOLIO <i class="fa fa-suitcase" aria-hidden="true"></i></span></a>
+        <a href="#body-four" onclick="javascript:clickStuff('body-four')"><span class="xNav">CONTACT <i class="fa fa-users" aria-hidden="true"></i></span></a>
     </div>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
