Hobbies page finished, email form edited to look more Material Design-like

--- a/index.html
+++ b/index.html
@@ -42,16 +42,67 @@
 
             <div id="caro1">
                 <h1>Flank Pariatur Nostrud</h1>
-                <p>
-                    Bacon ipsum dolor amet pork kevin turkey bresaola. Pig rump sirloin swine pork loin beef pastrami. Shank spare ribs bresaola prosciutto kevin picanha short loin fatback t-bone.
-                    Flank drumstick cupim pig frankfurter t-bone turkey sausage strip steak turducken bacon short loin leberkas.
-                    Meatball pig tongue, biltong pork cupim short ribs pork chop drumstick.
-                    Strip steak prosciutto turducken capicola picanha cow jerky spare ribs hamburger turkey ground round t-bone.
-                </p>
+
+                <article>
+                    <div class="left">
+                        <p>
+                            Bacon ipsum dolor amet pork kevin turkey bresaola. Pig rump sirloin swine pork loin beef pastrami. Shank spare ribs bresaola prosciutto kevin picanha short loin fatback t-bone.
+                            Flank drumstick cupim pig frankfurter t-bone turkey sausage strip steak turducken bacon short loin leberkas.
+                            Meatball pig tongue, biltong pork cupim short ribs pork chop drumstick.
+                            Strip steak prosciutto turducken capicola picanha cow jerky spare ribs hamburger turkey ground round t-bone.
+                        </p>
+                    </div>
+                    <hr style="display: inline-block;width: 1px; margin-top: -20px; border: none; border-left: black solid 3px;" size="430">
+                    <div class="right">
+                        <p>
+                            Bacon ipsum dolor amet pork kevin turkey bresaola. Pig rump sirloin swine pork loin beef pastrami. Shank spare ribs bresaola prosciutto kevin picanha short loin fatback t-bone.
+                            Flank drumstick cupim pig frankfurter t-bone turkey sausage strip steak turducken bacon short loin leberkas.
+                            Meatball pig tongue, biltong pork cupim short ribs pork chop drumstick.
+                            Strip steak prosciutto turducken capicola picanha cow jerky spare ribs hamburger turkey ground round t-bone.
+                        </p>
+                    </div>
+                </article>
             </div>
+
+
             <div id="caro2">
-                <span>Other stuff</span>
+                <h1>My Hobbies</h1>
+                <article>
+
+                    <div id="leftCol">
+                            <div class="circle">
+                                <span>
+                                    COMPUTERS
+                                    <i class="fa fa-television fa-4x"></i>
+                                </span>
+                            </div>
+                            <div class="circle">
+                                <span>
+                                    BOARD GAMES
+                                    <i class="fa fa-briefcase fa-4x"></i>
+                                </span>
+                            </div>
+                    </div>
+
+                    <div id="rightCol">
+                           <div class="circle">
+                               <span>
+                                   SPORTS<br>
+                                   <i class="fa fa-futbol-o fa-4x"></i>
+                               </span>
+                            </div>
+                            <div class="circle">
+                                 <span>
+                                    VIDEO GAMES
+                                    <i class="fa fa-gamepad fa-4x"></i>
+                                </span>
+                            </div>
+                    </div>
+
+                </article>
             </div>
+
+
             <div id="caro3">
                 <span>ya</span>
             </div>
@@ -60,6 +111,9 @@
     </section>
 
     <section id="body-four">
+        <div class="topStripe">
+
+        </div>
 
         <div class="box-form animated fadeInUp2">
 
