--- a/index.html
+++ b/index.html
@@ -110,6 +110,31 @@
 
     </section>
 
+
+    <section id="body-three">
+        <div class="topStripe pictureStripe">
+            <img src="images/hero3_4.png" alt="people" width="100%">
+        </div>
+    <div id="buttonPort" onclick="javscript:triggerPort()">         <!--I am clickable!!!-->
+        PORTFOLIO OF PROJECTS<br>
+        <i class="fa fa-angle-down fa-3x" aria-hidden="true"></i>
+    </div>
+        <div id="portfolioContainer">
+            <div class="itemBox">
+
+            </div>
+            <div class="itemBox" >
+
+            </div>
+            <div class="itemBox" >
+
+            </div>
+            <div class="itemBox" >
+
+            </div>
+        </div>
+    </section>
+
     <section id="body-four">
         <div class="topStripe">
 
@@ -135,7 +160,7 @@
         <a href="#body-one" onclick="javascript:clickStuff('body-one')"><span>HOME <i class="fa fa-home" aria-hidden="true"></i></span></a>
         <a href="#body-two" onclick="javascript:clickStuff('body-two')"><span>ABOUT <i class="fa fa-rocket" aria-hidden="true"></i></span></a>
         <a href="AndrewWardResume.docx"><span>RESUME <i class="fa fa-download" aria-hidden="true"></i></span></a>
-        <a href="#"><span>PORTFOLIO <i class="fa fa-suitcase" aria-hidden="true"></i></span></a>
+        <a href="#body-three" onclick="javascript:clickStuff('body-three')"><span>PORTFOLIO <i class="fa fa-suitcase" aria-hidden="true"></i></span></a>
         <a href="#body-four" onclick="javascript:clickStuff('body-four')"><span class="xNav">CONTACT <i class="fa fa-users" aria-hidden="true"></i></span></a>
     </div>
 
@@ -153,7 +178,7 @@
         });
     </script>
     <script type="text/javascript">
-
+        var clicked = false;
             function clickStuff(element) {
                 document.getElementById(element).className += 'animated ' + 'fadeIn ';
                 setTimeout(function () {
@@ -161,8 +186,26 @@
                 }, 500);
 
             }
+            function triggerPort() {
+
+                if(!clicked) {
+
+                    var contEle = document.getElementById('portfolioContainer');
+                    contEle.style.display = 'flex';
+
+                    setTimeout(function () {
+
+                        contEle.style.height = '50%';
+
+                        setTimeout(function () {
+
+                            contEle.style.width = '90%';
+                        }, 900);
+                    }, 100);
+                }
+            }
 
     </script>
 
-</body>
+    </body>
 </html>
