finished, Placeholders for projects

--- a/index.html
+++ b/index.html
@@ -120,16 +120,36 @@
         <i class="fa fa-angle-down fa-3x" aria-hidden="true"></i>
     </div>
         <div id="portfolioContainer">
+                                                    <!--Flexbox was SUPER nice here. I <3 FLEXBOX!-->
             <div class="itemBox">
+                <h1>Project Name</h1>
+                <h6>(insert project description here)</h6>
+                <div class="proLink">
+
+                </div>
+            </div>
+            <div class="itemBox" >
+                    <h1>Project Name</h1>
+                <h6>(insert project description here)</h6>
+                <div class="proLink">
+
+                </div>
 
             </div>
             <div class="itemBox" >
+                <h1>Project Name</h1>
+                <h6>(insert project description here)</h6>
+                <div class="proLink">
+
+                </div>
 
             </div>
             <div class="itemBox" >
+                <h1>Project Name</h1>
+                <h6>(insert project description here)</h6>
+                <div class="proLink">
 
-            </div>
-            <div class="itemBox" >
+                </div>
 
             </div>
         </div>
