--- a/index.html
+++ b/index.html
@@ -179,10 +179,25 @@
     <div class='navbar animated fadeInLeft'>
         <a href="#body-one" onclick="javascript:clickStuff('body-one')"><span>HOME <i class="fa fa-home" aria-hidden="true"></i></span></a>
         <a href="#body-two" onclick="javascript:clickStuff('body-two')"><span>ABOUT <i class="fa fa-rocket" aria-hidden="true"></i></span></a>
-        <a href="AndrewWardResume.docx"><span>RESUME <i class="fa fa-download" aria-hidden="true"></i></span></a>
+        <a id="myBtn"><span>RESUME <i class="fa fa-download" aria-hidden="true"></i></span></a>
         <a href="#body-three" onclick="javascript:clickStuff('body-three')"><span>PORTFOLIO <i class="fa fa-suitcase" aria-hidden="true"></i></span></a>
         <a href="#body-four" onclick="javascript:clickStuff('body-four')"><span class="xNav">CONTACT <i class="fa fa-users" aria-hidden="true"></i></span></a>
     </div>
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+            <h1>Resume Download</h1>
+            <span class="close">×</span>
+            <ul>
+                <li><a href="AndrewWardResume.docx">DOCX Format Download</a></li>
+                <li><a href="AndrewWardResume.pdf">PDF Format Download</a></li>
+            </ul>
+        </div>
+
+    </div>
+
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
@@ -224,6 +239,31 @@
                     }, 100);
                 }
             }
+        // Get the modal
+        var modal = document.getElementById('myModal');
+
+        // Get the button that opens the modal
+        var btn = document.getElementById("myBtn");
+
+        // Get the <span> element that closes the modal
+        var span = document.getElementsByClassName("close")[0];
+
+        // When the user clicks the button, open the modal
+        btn.onclick = function() {
+            modal.style.display = "block";
+        }
+
+        // When the user clicks on <span> (x), close the modal
+        span.onclick = function() {
+            modal.style.display = "none";
+        }
+
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
 
     </script>
 
